[package]
name = "clearing_house"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "clearing_house"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
bytemuck = "1.22.0"
pyth-solana-receiver-sdk = "0.6.0"
static_assertions = "1.1.0"
uint = "0.10.0"
